--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,21 @@ lint/tmp/
 # lint/reports/
 
 .idea
+
+#login added
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
+
