Add Ratepage class and adjust subject detail
1.Add Ratepage activity
2. add rate button and subject code text in subjectdetail activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UnimelbOrientation">
         <activity
+            android:name=".RatePage"
+            android:exported="true" />
+        <activity
             android:name=".subjectDetail"
             android:exported="true" />
         <activity
