--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/myunimelb
     username: root
-    password: yourPassword
+    password: 123456
     driver-class-name: com.mysql.jdbc.Driver
 #  redis:
 #    database: 0
