--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,17 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UnimelbOrientation"
         tools:targetApi="n">
-<!--        <activity-->
-<!--            android:name=".UniLoginActivity"-->
-<!--            android:exported="true" />-->
-
+        <activity
+            android:name=".AddressActivity"
+            android:exported="true" />
+        <!-- <activity -->
+        <!-- android:name=".UniLoginActivity" -->
+        <!-- android:exported="true" /> -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyARFJxcy7F2ywrCzP0jCuIojJZOymyoeTk" />
-        <meta-data android:name="com.google.android.gms.version"
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
-
         <activity
             android:name=".RatePage"
             android:exported="true" />
@@ -36,7 +37,6 @@
         <activity
             android:name=".subjectDetail"
             android:exported="true" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true" /> <!-- <activity android:name=".MapFragment" -->
