--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.loopj.android:android-async-http:1.4.11'
     implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:23.2.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.3'
+
 }
