--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ proguard/
 
 # Android Studio Navigation editor temp files
 .navigation/
+build.gradle
 
 # Android Studio captures folder
 captures/
